# sphinx-library

./: .gitignore  LICENSE  MANIFEST.in  README.rst  build.py  build_library.py  pyproject.toml  requirements-dev.txt  setup.py
docs/: contributing.html  customize.html  design-notes.html  genindex.html  index.html  installation.html  objects.inv  sample.html  search.html  searchindex.js
docs-source/: conf.py  customize.rst  installation.rst  sample.rst
docs/_sources/: contributing.rst.txt  customize.rst.txt  design-notes.rst.txt  index.rst.txt  installation.rst.txt  sample.rst.txt
docs/_static/: pygments.css
sphinx_library/: __init__.py  about.html  extralinks.html  globaltoc.html  layout.html  localtoc.html  readingmodes.html  sponsors.html  theme.conf  theme.py
sphinx_library/scss/: _fonts.scss  _mode-dark.scss  _mode-light.scss  _mode-sepia.scss  _pygments-dark.scss  _pygments-light.scss  library.scss  pygments.scss  type-academy-native.scss  type-academy.scss  type-book-native.scss  type-book.scss  type-engineer-native.scss  type-engineer.scss  type-humanist-native.scss  type-humanist.scss  type-swiss-native.scss  type-swiss.scss
sphinx_library/static/: custom.css  pygments.css
