[build-system]
requires = ["setuptools>=65.5"]
build-backend = "setuptools.build_meta"

[project]
authors = [
    {name = "Vince Salvino", email = "salvino@coderedcorp.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Sphinx",
    "Framework :: Sphinx :: Theme",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
]
description = "Typography-centric Sphinx theme that reads like a good book."
license = "MIT"
license-files = ["LICENSE.txt"]
name = "sphinx-library"
readme = "README.rst"
version = "1.1.3"

[project.entry-points."sphinx.html_themes"]
library = "sphinx_library"

[project.urls]
Documentation = "https://vsalvino.github.io/sphinx-library/"
Source = "https://github.com/vsalvino/sphinx-library"

[tool.ruff]
line-length = 80

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
case-sensitive = false
force-single-line = true
lines-after-imports = 2

# https://setuptools.pypa.io/en/latest/userguide/datafiles.html
# Everything within sphinx_library in version control is included by
# default. Exclude the SCSS files since we ship built CSS instead.
[tool.setuptools]
packages = ["sphinx_library"]

[tool.setuptools.exclude-package-data]
sphinx_library = ["scss/*"]
